Updated GTests for new config.ini location

--- a/GTest/CMakeLists.txt
+++ b/GTest/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 
+add_compile_definitions(GTESTING)
 set(SOURCE_FILES runAllTests.cpp ../ConfigFile.h ../ConfigFile.cpp TestConfigFile.cpp)
 
 add_executable(allBluePawnTests ${SOURCE_FILES})
