--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ include(${wxWidgets_USE_FILE})
 
 add_subdirectory(GTest)
 
+add_compile_definitions(BP_VERSION="v0.4")
+
 set(SOURCE_FILES MainApp.cpp MainApp.h MainWindow.cpp MainWindow.h CompilerDialog.cpp CompilerDialog.h IncludeDirDialog.cpp IncludeDirDialog.h WindowsIDs.h PawnDocument.cpp PawnDocument.h Research.cpp Research.h ConfigFile.cpp ConfigFile.h CompilerCfgDialog.cpp CompilerCfgDialog.h BluePawnPngRes.hpp)
 
 add_executable(BluePawn ${SOURCE_FILES})
